# supl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  doxyconfig  library.h
data/ecoli/: fix.py
data/wine/: fix.py
doc/html/: CrossValidation_8h.html  CrossValidation_8h_source.html  Instance_8h.html  Instance_8h_source.html  KNearestNeighbors_8h.html  KNearestNeighbors_8h_source.html  Learner_8h.html  Learner_8h_source.html  LossFunction_8h.html  LossFunction_8h_source.html  Parameter_8h.html  Parameter_8h_source.html  Sample_8h.html  Sample_8h_source.html  annotated.html  classcoisjoi.html  classes.html  classinput_1_1Instance-members.html  classinput_1_1Instance.html  classinput_1_1LabeledInstance-members.html  classinput_1_1LabeledInstance.html  classknearest_1_1KNearestNeighbors-members.html  classknearest_1_1KNearestNeighbors.html  classlearner_1_1Learner-members.html  classlearner_1_1Learner.html  classloss_1_1LossFunction-members.html  classloss_1_1LossFunction.html  classloss_1_1SquaredLoss-members.html  classloss_1_1SquaredLoss.html  classloss_1_1ZeroOneLoss-members.html  classloss_1_1ZeroOneLoss.html  classparameter_1_1Parameter-members.html  classparameter_1_1Parameter.html  classparameter_1_1ParameterSet-members.html  classparameter_1_1ParameterSet.html  classparameter_1_1ParameterSpace-members.html  classparameter_1_1ParameterSpace.html  classsample_1_1Sample-members.html  classsample_1_1Sample.html  classsample_1_1SlicedSample-members.html  (+36 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+11 more)
doc/latex/: CrossValidation_8h.tex  Instance_8h.tex  KNearestNeighbors_8h.tex  Learner_8h.tex  LossFunction_8h.tex  Parameter_8h.tex  Sample_8h.tex  annotated.tex  classcoisjoi.tex  classinput_1_1Instance.eps  classinput_1_1Instance.tex  classinput_1_1LabeledInstance.eps  classinput_1_1LabeledInstance.tex  classknearest_1_1KNearestNeighbors.eps  classknearest_1_1KNearestNeighbors.tex  classlearner_1_1Learner.tex  classloss_1_1LossFunction.eps  classloss_1_1LossFunction.tex  classloss_1_1SquaredLoss.eps  classloss_1_1SquaredLoss.tex  classloss_1_1ZeroOneLoss.eps  classloss_1_1ZeroOneLoss.tex  classparameter_1_1Parameter.tex  classparameter_1_1ParameterSet.tex  classparameter_1_1ParameterSpace.tex  classsample_1_1Sample.tex  classsample_1_1SlicedSample.tex  classsample_1_1SlicedSettedSample.tex  files.tex  hierarchy.tex  library_8h.tex  main_8cpp.tex  namespacecrossvalidation.tex  namespaceinput.tex  namespaceknearest.tex  namespacelearner.tex  namespaceloss.tex  namespaceparameter.tex  namespaces.tex  namespacesample.tex  (+4 more)
examples/: exampleKNN.cpp
include/: library.h  supl.h
include/Cross-validation/: CrossValidation.cpp  CrossValidation.h  CrossValidation.i.h
include/Input/: Instance.h  Instance.i.h  Sample.h  Sample.i.h
include/Learner/: Learner.h  Learner.i.h  Parameter.h  Parameter.i.h
include/Learner/Classification/KNearestNeighbors/: KNearestNeighbors.h  KNearestNeighbors.i.h
include/Loss/: LossFunction.h  LossFunction.i.h
src/: main.cpp  supl.cpp
src/Cross-validation/: CrossValidation.h
src/Input/: Input.cpp  Input.h  Instance.cpp  Instance.h  Sample.cpp  Sample.h
src/Learner/: Learner.cpp  Learner.h  Parameter.cpp  Parameter.h
src/Loss/: LossFunction.cpp  LossFunction.h
tests/: crosstest.csv  datatest.txt  emptylabel.csv  integerlabel.csv  missingvalue.csv  neardouble.csv  strings.csv  tests.cpp  witheader.csv
(+1 files in other folders)
